# wow-fullstack

./: .gitignore  CLAUDE.md  README.md  code_issues.json  llms.txt  自塾时间管理.html  负责人简介.md
tm-backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  check_password.py  docker-compose.yml  main.py  mydatabase.db  pyproject.toml  requirements.txt  seed.py  start.py
tm-backend/alembic/: env.py
tm-backend/alembic/versions/: 1daee8ea3da1_my_first_db.py  4f1be7961dae_add_last_study_time.py  code.txt
tm-backend/app/: config.py  database.py  dependencies.py  main.py
tm-backend/app/controllers/: users.py
tm-backend/app/core/models/: config.py  course.py  create.py  (+1 more)
tm-backend/app/models/: __init__.py  users.py
tm-backend/app/routers/: code_execution.py  config.py  course.py  create.py  health.py  inno.py  statistics.py  tutorial.py  users.py
tm-backend/app/services/: __init__.py  python_executor.py  sql_executor.py  web_executor.py
tm-backend/apps/am/: ammodel.py  view.py
tm-backend/apps/jc/: jcmodel.py  view.py
tm-backend/apps/login/: app.py  beknowmodels.py  create.py  forms.py  handdb.py  handdb2.py  logmodel.py  models.py  userlogin.ipynb  view.py
tm-backend/apps/my/: view.py
tm-backend/apps/nt/: brainmodel.py  view.py
tm-backend/apps/rw/: view.py
tm-backend/apps/rz/: view.py
tm-backend/apps/sp/: spmodel.py  view.py
tm-backend/apps/tm/: tmmodel.py  view.py
tm-backend/apps/tw/: view.py
tm-backend/routers/: users.py
tm-backend/tm-backend/: .env  README.md
tm-backend/tm-backend/app/: config.py  database.py  dependencies.py  main.py
(+545 files in other folders)
